add sitetoaster and small fixes

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 							<p>
 								A one page website that connects to The One Api and displays quotes from the Lord of
 								The Rings movies. The logo was built with the Ringbearer font and CSS, and it
-								adjusts to fit smaller screens!
+								adjusts to fit smaller screens.
 							</p>
 							<div class="buttons">
 								<a
@@ -484,6 +484,27 @@
 						</div>
 					</div>
 				</div>
+				<div class="project">
+					<div class="wrapper">
+						<div class="left">
+							<img
+								src="./assets/projects/sitetoaster.png"
+								alt="Screenshot of the Site Toaster project"
+							/>
+						</div>
+						<div class="right">
+							<h3 class="subtitle">WEB DESIGN, WORDPRESS</h3>
+							<h2 class="title">Site Toaster</h2>
+							<p>
+								A project to help small businesses look good online. Created with WordPress and
+								Elementor, it details the proposal and showcases my latest work.
+							</p>
+							<div class="buttons">
+								<a href="https://sitetoaster.unity42.ca/" target="_blank" class="btn">Website</a>
+							</div>
+						</div>
+					</div>
+				</div>
 			</section>
 			<section class="education">
 				<div class="wrapper">
@@ -527,7 +548,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="https://www.linkedin.com/in/fernanda-thiesen/" target="_blank">
+								<a href="https://ca.linkedin.com/in/fernanda-thiesen" target="_blank">
 									<svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 										<title>LinkedIn</title>
 										<path
@@ -536,7 +557,7 @@
 									</svg>
 								</a>
 							</li>
-							<li>
+							<!-- <li>
 								<a href="https://twitter.com/fcthiesen" target="_blank">
 									<svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 										<title>Twitter</title>
@@ -545,7 +566,7 @@
 										/>
 									</svg>
 								</a>
-							</li>
+							</li> -->
 							<li>
 								<a href="https://calendly.com/fcthiesen/virtual-meeting" target="_blank">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 361.77 361.77">
@@ -609,3 +630,4 @@
 		</script>
 	</body>
 </html>
+<!-- Mockups by https://mockuphone.com/ 1.6 aspect ratio -->
