mobile align left contact section

--- a/index.html
+++ b/index.html
@@ -601,6 +601,7 @@
 						<a href="./assets/fernanda-thiesen-resume.pdf" class="btn">Download Resume (PDF)</a>
 					</div>
 					<div class="right">
+						<div class="divider"></div>
 						<form netlify>
 							<label for="name" class="sr-only">Name</label>
 							<input type="text" id="name" name="name" placeholder="Name" required />
