update page title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 		<link rel="stylesheet" href="./styles/styles.css" />
 		<link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
-		<title>Fê Codes</title>
+		<title>Fê Codes - Fernanda Thiesen - Frontend Web Developer - Toronto</title>
 	</head>
 	<body>
 		<header>
