update popsipoll links

--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
 								<a href="https://melissalocquiao.com/" target="_blank">Melissa</a>.
 							</p>
 							<div class="buttons">
-								<a href="https://popsipoll.netlify.app/" target="_blank" class="btn">Live project</a
+								<a href="https://popsipoll-juno.netlify.app/" target="_blank" class="btn">Live project</a
 								><a
-									href="https://github.com/Cam-Fernanda-Melissa-Jake-Project4/popsipoll"
+									href="https://github.com/fthiesen/popsipoll"
 									target="_blank"
 									class="btn"
 									>GitHub</a
