add material ui and gitlab logos

--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@
 						<h4>Sass</h4>
 					</div>
 					<div class="skill">
+						<svg role="img" class="css3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+							<title>Material UI logo</title>
+							<path d="M0 259.8V0l225 129.9v86.6L75 129.9v173.2z"/><path d="M225 129.9L450 0v259.8l-150 86.6-75-43.3 150-86.6v-86.6l-150 86.6z"/><path d="M225 303.1v86.6l150 86.6v-86.6z"/><path d="M375 476.3l225-129.9V173.2l-75 43.3v86.6l-150 86.6zm150-346.4V43.3L600 0v86.6z"/>
+						</svg>
+						<h4>Material UI</h4>
+					</div>
+					<div class="skill">
 						<svg
 							role="img"
 							class="js"
@@ -197,6 +204,13 @@
 							/>
 						</svg>
 						<h4>GitHub</h4>
+					</div>
+					<div class="skill">
+						<svg role="img" class="github" viewBox="093.97 97.52 192.05 184.95" style="padding: 5px" xmlns="http://www.w3.org/2000/svg">
+							<title>GitLab logo</title>
+							<path d="M282.83,170.73l-.27-.69-26.14-68.22a6.81,6.81,0,0,0-2.69-3.24,7,7,0,0,0-8,.43,7,7,0,0,0-2.32,3.52l-17.65,54H154.29l-17.65-54A6.86,6.86,0,0,0,134.32,99a7,7,0,0,0-8-.43,6.87,6.87,0,0,0-2.69,3.24L97.44,170l-.26.69a48.54,48.54,0,0,0,16.1,56.1l.09.07.24.17,39.82,29.82,19.7,14.91,12,9.06a8.07,8.07,0,0,0,9.76,0l12-9.06,19.7-14.91,40.06-30,.1-.08A48.56,48.56,0,0,0,282.83,170.73Z"/>
+						</svg>
+						<h4>GitLab</h4>
 					</div>
 					<div class="skill">
 						<svg role="img" class="git" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 97 97">
@@ -544,6 +558,14 @@
 										<path
 											d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
 										/>
+									</svg>
+								</a>
+							</li>
+							<li>
+								<a href="https://gitlab.com/fthiesen" target="_blank">
+									<svg role="img" viewBox="93.97 97.52 192.05 184.95" style="padding: 1px" xmlns="http://www.w3.org/2000/svg">
+										<title>GitLab</title>
+										<path d="M282.83,170.73l-.27-.69-26.14-68.22a6.81,6.81,0,0,0-2.69-3.24,7,7,0,0,0-8,.43,7,7,0,0,0-2.32,3.52l-17.65,54H154.29l-17.65-54A6.86,6.86,0,0,0,134.32,99a7,7,0,0,0-8-.43,6.87,6.87,0,0,0-2.69,3.24L97.44,170l-.26.69a48.54,48.54,0,0,0,16.1,56.1l.09.07.24.17,39.82,29.82,19.7,14.91,12,9.06a8.07,8.07,0,0,0,9.76,0l12-9.06,19.7-14.91,40.06-30,.1-.08A48.56,48.56,0,0,0,282.83,170.73Z"/>
 									</svg>
 								</a>
 							</li>
