add search engine meta tags

--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="An independent self-starter front-end developer who uses her curious mind, attention to detail and persistence to innovate and solve problems in order to build intuitive and accessible websites and applications.">
+		<meta name="keywords" content="Frontend Web Developer, Web Designer, Toronto, Fernanda Thiesen">
+		<meta name="author" content="Fernanda Thiesen">
+		<meta property="og:image" content="./assets/fernanda-thiesen.jpg">
+		<meta property="og:image:alt" content="Fernanda Thiesen - Front-end developer with experience in graphic design and marketing">
+
 		<link rel="stylesheet" href="https://use.typekit.net/mif6fss.css" />
 		<link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css" />
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 		<link rel="stylesheet" href="./styles/styles.css" />
 		<link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+		
 		<title>Fê Codes - Fernanda Thiesen - Frontend Web Developer - Toronto</title>
 	</head>
 	<body>
