add firebase auth project

--- a/index.html
+++ b/index.html
@@ -303,6 +303,31 @@
 				<div class="project">
 					<div class="wrapper">
 						<div class="left">
+							<img
+								src="./assets/projects/authentication-app.png"
+								alt="Screenshot of the Firebase Auth project"
+							/>
+						</div>
+						<div class="right">
+							<h3 class="subtitle">JS, React, Material UI, Vite, Firebase</h3>
+							<h2 class="title">Firebase Authentication Web App</h2>
+							<p>A Firebase Authentication React app created with Vite. Projects are saved in the Firebase Database, profile pictures in the Firebase Storage and the app is deployed to Firebase Hosting through GitHub.</p>
+							<div class="buttons">
+								<a href="https://portfolio-826d0.firebaseapp.com/" target="_blank" class="btn"
+									>Live project</a
+								><a
+									href="https://github.com/fthiesen/firebase-auth"
+									target="_blank"
+									class="btn"
+									>GitHub</a
+								>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="project">
+					<div class="wrapper">
+						<div class="left">
 							<h3 class="subtitle">HTML, Sass, JS, React, Firebase</h3>
 							<h2 class="title">Popsipoll</h2>
 							<p>
@@ -525,7 +550,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div>				
 			</section>
 			<section class="education">
 				<div class="wrapper">
