--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 						<div class="right">
 							<h3 class="subtitle">JS, React, Material UI, Vite, Firebase</h3>
 							<h2 class="title">Firebase Authentication Web App</h2>
-							<p>A Firebase Authentication React app created with Vite. Projects are saved in the Firebase Database, profile pictures in the Firebase Storage and the app is deployed to Firebase Hosting through GitHub.</p>
+							<p>A Firebase Authentication React app created with Vite. Projects are saved in the Firebase Database, profile pictures in the Firebase Storage and the app is deployed to Firebase Hosting via GitHub.</p>
 							<div class="buttons">
 								<a href="https://portfolio-826d0.firebaseapp.com/" target="_blank" class="btn"
 									>Live project</a
