update about text

--- a/index.html
+++ b/index.html
@@ -65,16 +65,13 @@
 						<h2 class="subtitle">About me</h2>
 						<h3 class="title">Team player + decision maker + innovator</h3>
 						<p>
-							An independent self-starter front-end developer who uses her curious mind, attention
-							to detail and persistence to innovate and solve problems in order to build intuitive
-							and accessible websites and applications.
+							An independent self-starter front-end developer who uses her curious mind, attention to detail and persistence to innovate and solve problems in order to build intuitive websites and applications.
 						</p>
 						<p>
-							With 20 years of experience in working as a graphic design and marketing freelancer, I
-							bring the ability to critically evaluate information, make decisions, accept criticism
-							and feedback, and work effectively with people.
+							As a Software Developer at Milborne Group, I develop and maintain a real estate sales web app, resolving bugs, improving code quality, enhancing user experience, adding functionalities and building new features.
 						</p>
-						<p>I am looking to explore new opportunities that help me grow as a developer.</p>
+						<p>
+							I am a Juno College of Technology graduate with 20 years of experience in Web Design and a Bachelor’s Degree in Social Communications, with specialization in Marketing, and am looking to explore new opportunities that help me grow as a developer.</p>
 						<p>
 							You can learn more about my top talents, work style and preferences on my
 							<a href="https://secure.plum.io/p/4o5_E4mx7eIXeMtsCGI3Rw" target="_blank"
@@ -309,7 +306,7 @@
 							/>
 						</div>
 						<div class="right">
-							<h3 class="subtitle">JS, React, Material UI, Vite, Firebase</h3>
+							<h3 class="subtitle">ReactJS, Material UI, Vite, Firebase</h3>
 							<h2 class="title">Firebase Authentication Web App</h2>
 							<p>A Firebase Authentication React app created with Vite. Projects are saved in the Firebase Database, profile pictures in the Firebase Storage and the app is deployed to Firebase Hosting via GitHub.</p>
 							<div class="buttons">
