add experience, remove calendly and update resume pdf

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 							An independent self-starter front-end developer who uses her curious mind, attention to detail and persistence to innovate and solve problems in order to build intuitive websites and applications.
 						</p>
 						<p>
-							As a Software Developer at Milborne Group, I develop and maintain a real estate sales web app, resolving bugs, improving code quality, enhancing user experience, adding functionalities and building new features.
+							As a Software Engineer at Milborne Group, I develop and maintain a real estate sales web app, resolving bugs, improving code quality, enhancing user experience, adding functionalities and building new features.
 						</p>
 						<p>
-							I am a Juno College of Technology graduate with 20 years of experience in Web Design and a Bachelor’s Degree in Social Communications, with specialization in Marketing, and am looking to explore new opportunities that help me grow as a developer.</p>
+							I am a Juno College of Technology graduate with 20 years of experience in Web Design and a Bachelor’s Degree in Social Communications, with specialization in Marketing, and looking to explore new opportunities that help me grow as a developer.</p>
 						<p>
 							You can learn more about my top talents, work style and preferences on my
 							<a href="https://secure.plum.io/p/4o5_E4mx7eIXeMtsCGI3Rw" target="_blank"
@@ -549,6 +549,42 @@
 					</div>
 				</div>				
 			</section>
+			<section class="education experience">
+				<div class="wrapper">
+					<h2 class="subtitle">Experience</h2>
+					<div class="columns">
+						<div>
+							<h3 class="title">Front End Web Developer (2021-Present)</h3>
+							<h4>Milborne Group</h4>
+							<p>As a Software Engineer at Milborne, I develop and maintain a real estate sales web app, resolving bugs, improving code quality, enhancing user experience, adding functionalities and building new features.</p>
+							<ul>
+								<li>Successfully planned, designed and developed various features with the goal of automating the set up of new projects in the company’s sales web application, reducing managers’ requests and redirecting the development team’s efforts away from manual and repetitive tasks.</li>
+								<li>Independently built a feature that allows admins to set multiple conditions used in the generation of purchase and sale agreements, including the selection of unit details and documents to be inserted as a specific page of the contract, allowing for each deal to be fully customized.</li>
+								<li>Actively and consistently suggested and implemented UI improvements to boost visual experience and usability, as well as created table and chart reports, enhancing data analysis and visualization for decision making.</li>
+								<li>Collaborated closely with the backend developer to develop a unit tracker table from scratch in order to incorporate into the app a complex spreadsheet used by sales admins to track deals, also allowing them to set instructions, statuses and add detailed information and notes for all units in just one place.</li>
+								<li>Constantly tweaked the backend not only to accommodate new features, but also to reactivate cron jobs for email reminders and integrate the app with a third party email delivery platform, as well as develop an email tracking feature that allows users to see an activity log of opened emails sent out to purchasers and realtors, which offered me great exposure to backend technologies within the MERN stack and GraphQL Apollo Server and schemas.</li>
+							</ul>
+						</div>
+						<div>
+							<h3 class="title">Web Designer (1999-2021)</h3>
+							<h4>Freelancer</h4>
+							<ul>
+								<li>Engaged with hundreds of small business owners and managers, uncovering their needs and suggesting marketing and graphic design ideas as well as WordPress functionalities and website solutions within their budgets.</li>
+								<li>Worked both individually and with hosting support teams to troubleshoot WordPress and server issues for clients.</li>
+							</ul>
+							<h3 class="title">Editor-in-chief, Marketer, Web Designer (2009-2022)</h3>
+							<h4>OiCanada / Self-Employed</h4>
+							<ul>
+								<li>Developed the online magazine from scratch and reached a substantial average of 100,000 page views per month in 2016.</li>
+								<li>Worked individually as a web designer, creating several designs over the years, always keeping a fresh look for the readers, as well as customized some ready-made WordPress themes to match the magazine’s brand guidelines.</li>
+								<li>Engaged with several advertisers and partners, understanding their services, products and campaign goals to help them promote their businesses to the magazine’s audience and generate leads by putting together and delivering a promotion package including banner ads, paid content, landing pages, email marketing and social media marketing.</li>
+								<li>Collaborated with volunteers and contributors as editor-in-chief, creating, assigning, writing, editing and proofreading content in Portuguese.</li>
+								<li>Successfully published more than 1,500 pieces in Portuguese covering tourism, language schools, universities, colleges, high school programs, immigration, work, and culture.</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</section>
 			<section class="education">
 				<div class="wrapper">
 					<h2 class="subtitle">Education</h2>
@@ -564,6 +600,7 @@
 					<p>ETEC - Escola Técnica de Comunicação, Brazil</p>
 				</div>
 			</section>
+
 			<section class="contact" id="contact">
 				<div class="wrapper">
 					<h2 class="subtitle">Contact</h2>
@@ -574,10 +611,10 @@
 							would like to collab in a project?
 						</p>
 						<p>I would love to talk with you!</p>
-						<p>
+						<!-- <p>
 							You can send me a message or book a virtual meeting on my
 							<a href="https://calendly.com/fcthiesen/virtual-meeting" target="_blank">Calendly</a>.
-						</p>
+						</p> -->
 						<p><a href="mailto:fcthiesen@gmail.com">fcthiesen@gmail.com</a></p>
 						<ul>
 							<li>
@@ -618,7 +655,7 @@
 									</svg>
 								</a>
 							</li> -->
-							<li>
+							<!-- <li>
 								<a href="https://calendly.com/fcthiesen/virtual-meeting" target="_blank">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 361.77 361.77">
 										<title>Calendly</title>
@@ -647,9 +684,9 @@
 										</g>
 									</svg>
 								</a>
-							</li>
+							</li> -->
 						</ul>
-						<a href="./assets/fernanda-thiesen-resume.pdf" class="btn">Download Resume (PDF)</a>
+						<a href="./assets/fernanda-thiesen-resume.pdf" class="btn" target="_blank">Download Resume (PDF)</a>
 					</div>
 					<div class="right">
 						<div class="divider"></div>
