add buttons for experience and education, and add more details about web design experience

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					</div>
 					<div class="right">
 						<h2 class="subtitle">About me</h2>
-						<h3 class="title">Team player + decision maker + innovator</h3>
+						<!-- <h3 class="title">Team player + decision maker + innovator</h3> -->
 						<p>
 							An independent self-starter front-end developer who uses her curious mind, attention to detail and persistence to innovate and solve problems in order to build intuitive websites and applications.
 						</p>
@@ -78,6 +78,10 @@
 								>Plum Profile</a
 							>.
 						</p>
+						<div class="buttons" style="margin-top: 30px;">
+							<a href="#experience" class="btn btn2 btn-closer">Experience</a>
+							<a href="#education" class="btn btn2 btn-closer">Education</a>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -549,7 +553,7 @@
 					</div>
 				</div>				
 			</section>
-			<section class="education experience">
+			<section id="experience" class="education experience">
 				<div class="wrapper">
 					<h2 class="subtitle">Experience</h2>
 					<div class="columns">
@@ -570,6 +574,7 @@
 							<h4>Freelancer</h4>
 							<ul>
 								<li>Engaged with hundreds of small business owners and managers, uncovering their needs and suggesting marketing and graphic design ideas as well as WordPress functionalities and website solutions within their budgets.</li>
+								<li>Designed and customized WordPress themes to match the clients' brand guidelines, introduced plugins to make the websites more interactive, optimized them for SEO, and provided content updates and technical support.</li>
 								<li>Worked both individually and with hosting support teams to troubleshoot WordPress and server issues for clients.</li>
 							</ul>
 							<h3 class="title">Editor-in-chief, Marketer, Web Designer (2009-2022)</h3>
@@ -585,7 +590,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="education">
+			<section id="education" class="education">
 				<div class="wrapper">
 					<h2 class="subtitle">Education</h2>
 					<h3 class="title">Juno College Certificate (2020-2021)</h3>
