--- a/index.html
+++ b/index.html
@@ -535,11 +535,25 @@
 					<div class="wrapper">
 						<div class="left">
 							<img
-								src="./assets/projects/sitetoaster.png"
-								alt="Screenshot of the Site Toaster project"
+								src="./assets/projects/buildiq.png"
+								alt="Screenshot of the Site Build IQ"
 							/>
 						</div>
 						<div class="right">
+							<h3 class="subtitle">HTML, CSS</h3>
+							<h2 class="title">Build IQ</h2>
+							<p>
+								A coming soon page designed and coded following brand identity guidelines.
+							</p>
+							<div class="buttons">
+								<a href="./assets/projects/build-iq/coming-soon.html" target="_blank" class="btn">Website</a>
+							</div>
+						</div>
+					</div>
+				</div>				
+				<div class="project">
+					<div class="wrapper">
+						<div class="left">
 							<h3 class="subtitle">WEB DESIGN, WORDPRESS</h3>
 							<h2 class="title">Site Toaster</h2>
 							<p>
@@ -550,6 +564,13 @@
 								<a href="https://sitetoaster.unity42.ca/" target="_blank" class="btn">Website</a>
 							</div>
 						</div>
+						<div class="right">
+							<img
+								src="./assets/projects/sitetoaster.png"
+								alt="Screenshot of the Site Toaster project"
+							/>
+						</div>
+					
 					</div>
 				</div>				
 			</section>
