add responsive keyword to buildiq

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 							<h3 class="subtitle">HTML, CSS</h3>
 							<h2 class="title">Build IQ</h2>
 							<p>
-								A coming soon page designed and coded following brand identity guidelines.
+								A responsive coming soon page designed and coded following brand identity guidelines.
 							</p>
 							<div class="buttons">
 								<a href="./assets/projects/build-iq/coming-soon.html" target="_blank" class="btn">Website</a>
