--- a/index.html
+++ b/index.html
@@ -574,6 +574,43 @@
 					</div>
 				</div>				
 			</section>
+			<section>
+				<div class="marquee">
+					<ul class="marquee__content">
+						<li>HTML</li>
+						<li>CSS</li>
+						<li>Sass</li>
+						<li>Material UI</li>
+						<li>JavaScript</li>
+						<li>ReactJS</li>
+						<li>GraphQL</li>
+						<li>Firebase</li>
+						<li>GitHub</li>
+						<li>GitLab</li>
+						<li>Git</li>
+						<li>Rest API</li>
+						<li>Command Line</li>
+						<li>Responsive Design</li>					
+					</ul>
+					<ul class="marquee__content" aria-hidden="true">
+						<li>HTML</li>
+						<li>CSS</li>
+						<li>Sass</li>
+						<li>Material UI</li>
+						<li>JavaScript</li>
+						<li>ReactJS</li>
+						<li>GraphQL</li>
+						<li>Firebase</li>
+						<li>GitHub</li>
+						<li>GitLab</li>
+						<li>Git</li>
+						<li>Rest API</li>
+						<li>Command Line</li>
+						<li>Responsive Design</li>
+					</ul>
+				
+				</div>
+			</section>
 			<section id="experience" class="education experience">
 				<div class="wrapper">
 					<h2 class="subtitle">Experience</h2>
@@ -626,7 +663,6 @@
 					<p>ETEC - Escola Técnica de Comunicação, Brazil</p>
 				</div>
 			</section>
-
 			<section class="contact" id="contact">
 				<div class="wrapper">
 					<h2 class="subtitle">Contact</h2>
