--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 						>
 							<title>Accessibility icon</title>
 							<g fill="none" fill-rule="evenodd" id="Page-1" stroke="none" stroke-width="1">
-								<g fill="#ffffff" id="Core" transform="translate(-3.000000, -2.000000)">
+								<g fill="#1223E6" id="Core" transform="translate(-3.000000, -2.000000)">
 									<g id="accessibility" transform="translate(3.000000, 2.000000)">
 										<path
 											d="M9,0 C10.1,0 11,0.9 11,2 C11,3.1 10.1,4 9,4 C7.9,4 7,3.1 7,2 C7,0.9 7.9,0 9,0 L9,0 Z M18,7 L12,7 L12,20 L10,20 L10,14 L8,14 L8,20 L6,20 L6,7 L0,7 L0,5 L18,5 L18,7 L18,7 Z"
