remove effects from first sections

--- a/index.html
+++ b/index.html
@@ -23,20 +23,10 @@
 	<body>
 		<header>
 			<div class="wrapper">
-				<div
-					class="top-bar"
-					data-aos="fade-down"
-					data-aos-duration="500"
-					data-aos-easing="ease-in-out"
-				>
+				<div class="top-bar">
 					<div class="logo">{ fê codes }</div>
 				</div>
-				<div
-					class="content"
-					data-aos="fade-up"
-					data-aos-duration="500"
-					data-aos-easing="ease-in-out"
-				>
+				<div class="content">
 					<h5>Hi <span class="lnr lnr-hand" aria-hidden="true"></span> I'm Fê!</h5>
 					<h1>A front-end developer in Toronto</h1>
 					<h2>with experience in graphic design and marketing</h2>
@@ -49,13 +39,7 @@
 		</header>
 
 		<main>
-			<section
-				class="about"
-				id="about"
-				data-aos="fade-up-right"
-				data-aos-duration="500"
-				data-aos-easing="ease-in-out"
-			>
+			<section class="about" id="about">
 				<div class="wrapper">
 					<div class="left">
 						<div class="name">
