change browser address bar color

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 		<link rel="stylesheet" href="./styles/styles.css" />
 		<link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+
+		<!-- Chrome, Firefox OS and Opera -->
+    <meta name="theme-color" content="#2E39BF" />
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#2E39BF" />
+    <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="#2E39BF" />
 		
 		<title>Fê Codes - Fernanda Thiesen - Frontend Web Developer - Toronto</title>
 	</head>
