--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
 		</footer>
 
 		<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-		<script data-goatcounter="https://stats.arp242.net/count" async src="//stats.arp242.net/count.js"></script>
+		<script data-goatcounter="https://fecodes.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 		<script>
 			AOS.init()
 			const datetime = new Date().getFullYear()
