--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 		<header>
 			<div class="wrapper">
 				<div class="top-bar">
-					<div class="logo" data-aos="fade" data-aos-delay="500">{ fê codes }</div>
+					<div class="logo">{ fê codes }</div>
 				</div>
 				<div class="content">
-					<h5 data-aos="fade-up">Hi <span class="lnr lnr-hand" aria-hidden="true"></span> I'm Fê!</h5>
-					<h1 data-aos="fade-up" data-aos-delay="100">A front-end developer in Toronto</h1>
-					<h2 data-aos="fade-up" data-aos-delay="200">with experience in graphic design and marketing</h2>
-					<div class="buttons" data-aos="fade-up" data-aos-delay="300">
+					<h5>Hi <span class="lnr lnr-hand" aria-hidden="true"></span> I'm Fê!</h5>
+					<h1>A front-end developer in Toronto</h1>
+					<h2>with experience in graphic design and marketing</h2>
+					<div class="buttons">
 						<a href="#about" class="btn btn2">About me</a>
 						<a href="#contact" class="btn btn2">Get in touch</a>
 					</div>
@@ -45,7 +45,7 @@
 			</div>
 		</header>
 
-		<main data-aos="fade" data-aos-delay="500">
+		<main>
 			<section class="about" id="about">
 				<div class="wrapper">
 					<div class="left">
@@ -752,10 +752,8 @@
 			<p>&copy; 2021-<span id="current-year" class="current-year">2021</span> — Fernanda Thiesen</p>
 		</footer>
 
-		<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 		<script data-goatcounter="https://fecodes.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 		<script>
-			AOS.init()
 			const datetime = new Date().getFullYear()
 			document.getElementById("current-year").textContent = datetime
 			
