import fonts directly

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 		<script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 
-		<link rel="stylesheet" href="https://use.typekit.net/mif6fss.css" />
+		<!-- <link rel="stylesheet" href="https://use.typekit.net/mif6fss.css" /> -->
 		<link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css" />
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 		<link rel="stylesheet" href="./styles/styles.css" />
@@ -24,6 +24,38 @@
     <meta name="msapplication-navbutton-color" content="#2E39BF" />
     <!-- iOS Safari -->
     <meta name="apple-mobile-web-app-status-bar-style" content="#2E39BF" />
+
+		<style>
+
+			@font-face {
+				font-family:"forma-djr-micro";
+				src:url("https://use.typekit.net/af/9f9862/00000000000000003b9ae4e0/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"),url("https://use.typekit.net/af/9f9862/00000000000000003b9ae4e0/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"),url("https://use.typekit.net/af/9f9862/00000000000000003b9ae4e0/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
+				font-display:auto;font-style:normal;font-weight:400;font-stretch:normal;
+			}
+
+			@font-face {
+				font-family:"forma-djr-micro";
+				src:url("https://use.typekit.net/af/648356/00000000000000003b9ae4e3/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("woff2"),url("https://use.typekit.net/af/648356/00000000000000003b9ae4e3/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("woff"),url("https://use.typekit.net/af/648356/00000000000000003b9ae4e3/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("opentype");
+				font-display:auto;font-style:normal;font-weight:500;font-stretch:normal;
+			}
+
+			@font-face {
+				font-family:"cy";
+				src:url("https://use.typekit.net/af/940fef/00000000000000007735cab8/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("woff2"),url("https://use.typekit.net/af/940fef/00000000000000007735cab8/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("woff"),url("https://use.typekit.net/af/940fef/00000000000000007735cab8/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("opentype");
+				font-display:auto;font-style:normal;font-weight:500;font-stretch:normal;
+			}
+
+			@font-face {
+				font-family:"new-spirit";
+				src:url("https://use.typekit.net/af/19f9aa/00000000000000007735c4be/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3") format("woff2"),url("https://use.typekit.net/af/19f9aa/00000000000000007735c4be/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3") format("woff"),url("https://use.typekit.net/af/19f9aa/00000000000000007735c4be/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3") format("opentype");
+				font-display:auto;font-style:normal;font-weight:600;font-stretch:normal;
+			}
+
+			.tk-forma-djr-micro { font-family: "forma-djr-micro",sans-serif; }
+			.tk-cy { font-family: "cy",sans-serif; }
+			.tk-new-spirit { font-family: "new-spirit",serif; }
+			
+		</style>
 		
 		<title>Fê Codes - Fernanda Thiesen - Frontend Web Developer - Toronto</title>
 	</head>
