--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 					<div class="wrapper">
 						<div class="left">
 							<img
-								src="./assets/projects/authentication-app.png"
+								src="./assets/projects/authentication-app.webp"
 								alt="Screenshot of the Firebase Auth project" 
 							/>
 						</div>
@@ -229,7 +229,7 @@
 						</div>
 						<div class="right">
 							<img
-								src="./assets/projects/popsipoll.png"
+								src="./assets/projects/popsipoll.webp"
 								alt="Screenshot of the Popsipoll project"
 							/>
 						</div>
@@ -239,7 +239,7 @@
 					<div class="wrapper">
 						<div class="left">
 							<img
-								src="./assets/projects/must-watch.png"
+								src="./assets/projects/must-watch.webp"
 								alt="Screenshot of the Must Watch project"
 							/>
 						</div>
@@ -286,7 +286,7 @@
 						</div>
 						<div class="right">
 							<img
-								src="./assets/projects/amazed-by-tv.png"
+								src="./assets/projects/amazed-by-tv.webp"
 								alt="Screenshot of the Amazed by TV project"
 							/>
 						</div>
@@ -296,7 +296,7 @@
 					<div class="wrapper">
 						<div class="left">
 							<img
-								src="./assets/projects/lotr-quotes.png"
+								src="./assets/projects/lotr-quotes.webp"
 								alt="Screenshot of the Lord of the Rings Quotes project"
 							/>
 						</div>
@@ -349,7 +349,7 @@
 						</div>
 						<div class="right">
 							<img
-								src="./assets/projects/supplements-calc.png"
+								src="./assets/projects/supplements-calc.webp"
 								alt="Screenshot of the Supplements Calculator project"
 							/>
 						</div>
@@ -359,7 +359,7 @@
 					<div class="wrapper">
 						<div class="left">
 							<img
-								src="./assets/projects/hangry-tummy.png"
+								src="./assets/projects/hangry-tummy.webp"
 								alt="Screenshot of the Hangry Tummy project"
 							/>
 						</div>
@@ -404,7 +404,7 @@
 						</div>
 						<div class="right">
 							<img
-								src="./assets/projects/boat-ride-adventures.png"
+								src="./assets/projects/boat-ride-adventures.webp"
 								alt="Screenshot of the Supplements Calculator project"
 							/>
 						</div>
@@ -414,7 +414,7 @@
 					<div class="wrapper">
 						<div class="left">
 							<img
-								src="./assets/projects/buildiq.png"
+								src="./assets/projects/buildiq.webp"
 								alt="Screenshot of the Site Build IQ"
 							/>
 						</div>
@@ -445,7 +445,7 @@
 						</div>
 						<div class="right">
 							<img
-								src="./assets/projects/sitetoaster.png"
+								src="./assets/projects/sitetoaster.webp"
 								alt="Screenshot of the Site Toaster project"
 							/>
 						</div>
