optimize image and code

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						<div class="name">
 							<p><strong>Fernanda Thiesen</strong> — Web Developer</p>
 						</div>
-						<img src="./assets/fthiesen.jpg" alt="A photo of Fernanda Thiesen" />
+						<img src="./assets/fthiesen.webp" alt="A photo of Fernanda Thiesen" />
 					</div>
 					<div class="right">
 						<h2 class="subtitle">About me</h2>
@@ -556,22 +556,16 @@
 							<a href="https://calendly.com/fcthiesen/virtual-meeting" target="_blank">Calendly</a>.
 						</p> -->
 						<p><a href="mailto:fcthiesen@gmail.com">fcthiesen@gmail.com</a></p>
-						<ul>
-							<li>
-								<a href="https://github.com/fthiesen/" target="_blank">
-									<img src="./assets/icons/github.svg" alt="github icon">
-								</a>
-							</li>
-							<li>
-								<a href="https://gitlab.com/fthiesen" target="_blank">
-									<img src="./assets/icons/gitlab.svg" alt="gitlab icon">
-								</a>
-							</li>
-							<li>
-								<a href="https://ca.linkedin.com/in/fernanda-thiesen" target="_blank">
-									<img src="./assets/icons/linkedin.svg" alt="linkedin icon">
-								</a>
-							</li>
+						<div class="icons">						
+							<a href="https://github.com/fthiesen/" target="_blank">
+								<img src="./assets/icons/github.svg" alt="github icon">
+							</a>
+							<a href="https://gitlab.com/fthiesen" target="_blank">
+								<img src="./assets/icons/gitlab.svg" alt="gitlab icon">
+							</a>
+							<a href="https://ca.linkedin.com/in/fernanda-thiesen" target="_blank">
+								<img src="./assets/icons/linkedin.svg" alt="linkedin icon">
+							</a>
 							<!-- <li>
 								<a href="https://twitter.com/fcthiesen" target="_blank">
 									<svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -612,7 +606,7 @@
 									</svg>
 								</a>
 							</li> -->
-						</ul>
+						</div>
 						<a href="./assets/fernanda-thiesen-resume.pdf" class="btn" target="_blank">Download Resume (PDF)</a>
 					</div>
 					<div class="right">
